Add Netlify Function for server-side social media meta tags
- Create netlify/functions/review-meta.js to serve proper meta tags for review URLs
- Function reads reviews-data.js and generates HTML with review-specific meta tags
- Update netlify.toml to route /review/:id to the function instead of redirect
- Fix double slash issue in URLs by cleaning base URLs
- Social media crawlers will now see proper review content instead of generic homepage
- Function redirects users to main page while serving meta tags to crawlers

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   publish = "."
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/review/:id"
-  to = "/index.html?review=:id"
+  to = "/.netlify/functions/review-meta/:id"
   status = 200
 
 [[redirects]]
