Generate static HTML pages for social media meta tags
- Create generate-review-pages.js script to generate individual HTML files for each review
- Generate 31 review pages in /review/ directory with proper meta tags
- Each review page contains review-specific Open Graph and Twitter Card meta tags
- Update netlify.toml to serve /review/:id as /review/:id.html
- Social media crawlers will now see proper review content instead of generic homepage
- Users get redirected to main page while crawlers see static meta tags

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build]
   publish = "."
-  functions = "netlify/functions"
 
 [[redirects]]
   from = "/review/:id"
-  to = "/.netlify/functions/review-meta/:id"
+  to = "/review/:id.html"
   status = 200
 
 [[redirects]]
