Update Netlify redirects and modify serve command in package.json
- Adjusted _redirects to serve actual review pages directly and handle all other URLs for client-side routing.
- Changed the serve command in package.json to use node server.js, while adding a separate command for serving with Python.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
-    "serve": "python3 -m http.server 8000",
+    "serve": "node server.js",
+    "serve:python": "python3 -m http.server 8000",
     "build": "node generate-review-pages.js",
     "optimize-images": "node optimize-images.js",
     "compress-images": "bash compress-images-advanced.sh"
