Update Lighthouse configuration and remove outdated reports
- Adjusted performance thresholds in .lighthouserc.json to lower minimum scores for categories and increase maximum values for key metrics.
- Updated GitHub Actions workflow to disable artifact uploads and temporary public storage.
- Removed multiple outdated Lighthouse report files to streamline the project and reduce clutter.

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -35,5 +35,5 @@ jobs:
         uses: treosh/lighthouse-ci-action@v10
         with:
           configPath: './.lighthouserc.json'
-          uploadArtifacts: true
-          temporaryPublicStorage: true
+          uploadArtifacts: false
+          temporaryPublicStorage: false
