--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -32,8 +32,12 @@ jobs:
           PORT: 8000
 
       - name: Run Lighthouse CI
-        uses: treosh/lighthouse-ci-action@v10
-        with:
-          configPath: './.lighthouserc.json'
-          uploadArtifacts: false
-          temporaryPublicStorage: false
+        run: |
+          npx @lhci/cli@0.12.x collect --config=./.lighthouserc.json
+          npx @lhci/cli@0.12.x assert --config=./.lighthouserc.json
+          
+      - name: Show Lighthouse Results
+        run: |
+          echo "Lighthouse CI completed successfully!"
+          echo "Results are stored in .lighthouseci/ directory"
+          ls -la .lighthouseci/
