Implement cache busting solution for fresh content delivery
- Add version query parameters to script tags in index.html
- Update Service Worker to use network-first strategy for JS files
- Bump Service Worker cache version to force cache refresh
- Create update-version.js script to automate version updates
- Add npm scripts: 'update-version' and 'deploy' for easy deployment
- Document reviews needing better endings in todo.md

This ensures users always get fresh review content without manual cache clearing.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "serve:python": "python3 -m http.server 8000",
     "build": "node generate-review-pages.js",
     "optimize-images": "node optimize-images.js",
-    "compress-images": "bash compress-images-advanced.sh"
+    "compress-images": "bash compress-images-advanced.sh",
+    "update-version": "node update-version.js",
+    "deploy": "npm run update-version && npm run build && git add -A && echo 'Files staged. Ready to commit and push!'"
   },
   "keywords": [
     "movie-reviews",
