Enhance build process and improve SEO features in Snarkflix
- Updated the build script to include image sitemap generation for better SEO.
- Modified robots.txt to reference the new image sitemap for improved indexing.
- Enhanced alt text for review images to include movie title, year, and category for better accessibility and SEO.
- Added Open Graph meta tags for images, including dimensions and fallback options to improve social media sharing.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "jest --ci --coverage --watchAll=false",
     "serve": "node server.js",
     "serve:python": "python3 -m http.server 8000",
-    "build": "node generate-review-pages.js && node generate-sitemap.js",
+    "build": "node generate-review-pages.js && node generate-sitemap.js && node generate-image-sitemap.js",
     "optimize-images": "node optimize-images.js",
     "compress-images": "bash compress-images-advanced.sh",
     "update-version": "node update-version.js",
